--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="text">
                     <div id="code"> <font color="#FF0000"> <span class="say">Gửi em, Ngọc yêu của anh</span><br>
                       <span class="say">Em à !</span><br>
-                      <span class="say">Anh rất muốn ở bên cạnh em trong những ngày em mệt mỏi nhất, nhưng lại chẳng thể làm được... Chỉ có thể nói với qua những dòng tin nhắn thế này</span><br>
+                      <span class="say">Anh rất muốn ở bên cạnh em trong những ngày em mệt mỏi nhất, nhưng lại chẳng thể làm được... Chỉ có thể nói với em qua những dòng tin nhắn thế này</span><br>
                       <span class="say">Anh thương em lắm </span><br>
                       <span class="say">Cảm ơn em vì đã luôn bên cạnh anh, dành sự tin tưởng cho anh, dù khoảng cách có xa đến đâu anh tin một ngày gần nhất chúng ta sẽ được ở bên nhau.</span><br>
                       <span class="say">Chúc công chúa anh...</span><br>
